# maestro

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: CAPABILITIES.md
examples/librechat/: .env.example  README.md  compose.yaml  librechat.yaml
examples/opencode/: README.md  compose.yaml  opencode.json
examples/rag/: README.md  compose.yaml  pyproject.toml  rag.py
examples/rag/sample/: make_sample.py
src/maestro/: __init__.py  __main__.py
src/maestro/chains/: __init__.py  agent.py
src/maestro/config/: __init__.py  loader.py  models.py
src/maestro/core/: __init__.py  errors.py  models.py  protocols.py  types.py
src/maestro/extractors/: __init__.py  azure.py  docling.py  kreuzberg.py  mistral.py  multi.py  text.py  tika.py  unstructured.py
src/maestro/middleware/: __init__.py  wrappers.py
src/maestro/policy/: __init__.py  noop.py  policy.py
src/maestro/providers/: __init__.py  registry.py
src/maestro/providers/anthropic/: __init__.py  _constants.py  completer.py
src/maestro/providers/chroma/: vectorstore.py
src/maestro/providers/google/: completer.py  embedder.py
src/maestro/providers/grpc/: __init__.py  extractor.py  segmenter.py
src/maestro/providers/grpc/_proto/: extractor_pb2.py  extractor_pb2.pyi  extractor_pb2_grpc.py  segmenter.proto  segmenter_pb2.py  segmenter_pb2.pyi  segmenter_pb2_grpc.py
src/maestro/providers/ollama/: completer.py  embedder.py
src/maestro/providers/openai/: __init__.py  _constants.py  _throttle.py  completer.py  embedder.py
src/maestro/providers/openrouter/: __init__.py  _client.py  completer.py  renderer.py  synthesizer.py  transcriber.py
src/maestro/scrapers/: __init__.py  fetch.py
src/maestro/segmenters/: __init__.py  code.py  jina.py  kreuzberg.py  text.py  unstructured.py
src/maestro/server/: app.py  auth.py
src/maestro/server/openai/: chat.py  convert.py  embeddings.py  extract.py  models.py  models_handler.py  segment.py  tokens.py
src/maestro/server/openai/responses/: convert.py  handler.py  models.py
src/maestro/tools/: __init__.py
tests/maestro/chains/: test_agent.py
tests/maestro/config/: test_loader.py
tests/maestro/core/: test_core_models.py  test_errors.py
tests/maestro/policy/: test_policy.py
tests/maestro/providers/anthropic/: test_completer.py
tests/maestro/providers/google/: test_completer.py
tests/maestro/providers/grpc/: test_grpc_providers.py
tests/maestro/providers/ollama/: test_providers.py
tests/maestro/providers/openai/: test_completer.py  test_throttle.py
tests/maestro/providers/openrouter/: test_openrouter.py
tests/maestro/scrapers/: test_fetch.py
tests/maestro/server/: test_auth.py  test_embedding_inputs.py  test_new_features.py  test_server.py
tests/maestro/tools/: test_tools.py
