[project]
name = "maestro"
version = "0.1.0"
description = "Intelligent LLM orchestration platform"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "python-multipart>=0.0.7",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0",
    "tiktoken>=0.8",
]
openai = ["openai>=1.82"]
anthropic = ["anthropic>=0.52"]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
chroma = ["chromadb>=0.6"]
grpc = ["grpcio>=1.60", "protobuf>=5.0"]
qdrant = ["qdrant-client>=1.12"]
all = ["maestro[server,openai,anthropic,google,ollama,chroma,grpc]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[project.scripts]
maestro = "maestro.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/maestro/providers/grpc/_proto/*" = ["E501", "F401", "I001", "N802", "N806", "UP004", "UP007", "UP009", "UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
