[project]
name = "maestro-rag-example"
version = "0.1.0"
description = "Minimal RAG CLI built on Maestro capabilities"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6",
    "httpx>=0.27",
]

[project.scripts]
rag = "rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["rag.py"]

[tool.hatch.build.targets.wheel.sources]
"rag.py" = "rag.py"
